# challenge_ford

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/cleaned/: 2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv
data/processed/: 2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv
data/raw/: 2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv
notebooks/: EDA_processed_data.ipynb
src/: dataset.py
src/model/: predict.py  train.py
src/modules/: clean_data.py  get_data.py  process_data.py
